--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test --env=jsdom"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "browserslist": {
     "production": [
