--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
   },
   "engines": {
-    "node": "18.x"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
